fix header footer layout bug

--- a/assets/scss/helper/_mixin.scss
+++ b/assets/scss/helper/_mixin.scss
@@ -3,7 +3,11 @@
     @content;
   }
 }
-
+@mixin md{
+  @media (max-width:768px) {
+    @content;
+  }
+}
 @mixin sm{
   @media (max-width:576px) {
     @content;
