--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -7,7 +7,7 @@
   @include lg{
     max-width: 40px;
   }
-  @include sm{
+  @include md{
     max-width: 24px;
   }
 }
